tests/ui/error-codes/E0207.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/E0207.rs:3:6
   |
LL | impl<T: Default> Foo {
   |      ^ unconstrained type parameter
   |
help: Either remove the type parameter 'T' or make use of it, for example ` for S<T>`.
   |
LL - impl<T: Default> Foo {
LL + impl<: Default> Foo {
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
